--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
     background-color: blanchedalmond;
+    margin: 0px;
 }
 
 .logo {
@@ -19,4 +20,21 @@ body {
     display: inline-block;
     padding: 10px;
     text-decoration: none;
+}
+.banner {
+    /* vh = viewport height = window height */
+    min-height: 50vh;
+    background-image: url("images/bogdan-dada-yoxSzcRuGzU-unsplash.jpg");
+    /* to fit image inside banner box, use background-size: contain; */
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+.banner h1 {
+    text-align: center;
+    margin: 0px;
+    padding: 25vh;
+    color: white;
+    font-size: 4em;
+    text-shadow: 0px 0px 2px #333333;
 }
